# MaxScale

./: .bzrignore  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Changelog.md  CheckPlatform.cmake  Documentation-Contents.md  ENV_SETUP.md  FindMySQL.cmake  FindMySQLClient.cmake  FindMySQLConfig.cmake  FindRabbitMQ.cmake  FindValgrind.cmake  HOW_TO_WRITE_TEST.md  JENKINS.md  LICENSE-THIRDPARTY.TXT  LICENSE.TXT  LICENSE2208.TXT  LICENSE23.TXT  LICENSE2302.TXT  LICENSE2308.TXT  LICENSE24.TXT  LICENSE2402.TXT  LICENSE25.TXT  LICENSE6.TXT  Makefile  MaxScale.cnf  PLUGIN_DEVELOPER_MANUAL.md  PULL_REQUEST_TEMPLATE.md  README  README.md  SETUP  VERSION  VERSION.cmake  VERSION20.cmake  VERSION21.cmake  (+259 more)
avro/: CMakeLists.txt  maxavro.c  maxavro.cc  maxavro.h  maxavro.hh  maxavro_datablock.c  maxavro_datablock.cc  maxavro_file.c  maxavro_file.cc  maxavro_internal.h  maxavro_internal.hh  maxavro_record.c  maxavro_record.cc  maxavro_schema.c  maxavro_schema.cc  maxavro_write.c  maxavro_write.cc  maxavrocheck.c  maxavrocheck.cc
avro/test/: CMakeLists.txt  test_values.c  test_values.cc
client/: .gitignore  .maxadmin.c.swp  CMakeLists.txt  Makefile  depend.mk  maxadmin.c
client/maxctrl/: build.sh  common.js  core.js  maxctrl.js  package.json
client/test/: CMakeLists.txt  maxadmin_stress.sh  maxadmin_test.sh
connectors/cdc-connector/: CMakeLists.txt  README.md  cdc_connector.cpp  cdc_connector.h
examples/: CMakeLists.txt  examplefilter.cc  examplefilter.hh  examplefiltersession.cc  examplefiltersession.hh  roundrobinrouter.cpp  testfilter.c  testprotocol.c  testroute.c
include/maxscale/: CMakeLists.txt  adminusers.h.in  adminusers.hh.in  alloc.h  atomic.h  authenticator.h  authenticator.hh  authenticator2.hh  backend.hh  base_user_manager.hh  bitmask.h  buffer.h  buffer.hh  build_details.hh.in  built_in_modules.hh  cachingparser.hh  ccdefs.hh  cdefs.h  clock.h  clock.hh  cn_strings.hh  config.h  config.hh  config2.hh  config_common.hh  config_runtime.h  config_state.hh  connection_metadata.hh  cpp.hh  cppdefs.hh  customparser.hh  dbusers.h  dcb.h  dcb.hh  dcbhandler.hh  debug.h  def_monitor_event.h  diskspace.hh  encryption.h  event.hh  (+136 more)
log_manager/: CMakeLists.txt  Makefile  liblog_manager.so.1.0.1  log_manager.cc  log_manager.h  makefile
log_manager/test/: .gitignore  CMakeLists.txt  Makefile  logorder.sh  makefile  nohup.out  testlog  testlog.c  testorder.c
maxctrl/: .eslintrc.js  CMakeLists.txt  autodoc.sh  build.sh  common.js  configure_version.cmake  copy_sources.sh  core.js  maxctrl.in  maxctrl.js  npm_install.sh  package-lock.json  package.json  test_utils.js  webpack.config.js
maxctrl/lib/: alter.js  api.js  call.js  classify.js  clear.js  cluster.js  common.js  core.js  create.js  debug.js  destroy.js  disable.js  drain.js  enable.js  link.js  list.js  reload.js  rotate.js  set.js  show.js  start.js  stop.js  unlink.js  utils.js  version.js.in
maxctrl/maxctrl_core/: common.js  core.js  package.json
maxctrl/test/: CMakeLists.txt  alter.js  api.js  call.js  classify.js  cluster.js  createdestroy.js  debug.js  diagnostics.js  docker-compose.yml  drain.js  enabledisable.js  link.js  monitor.js  reload.js  rotate.js  server.js  service.js  special.js  startstop.js  states.js  test_rest_api.sh  unknown.js
maxgui/: .env  .env.development  .eslintrc-auto-import.json  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  .prettierrc.json  CMakeLists.txt  README.md  babel.config.js  build.sh  copy_sources.sh  index.html  jsconfig.json  npm_install.sh  package-lock.json  package.json  vite.config.js  vitest.config.js  vue.config.js
maxgui/dev-certs/: dev-cert-key.pem  dev-cert.pem
maxgui/public/: index.html
maxgui/queryEditor/: README.md  config.js  index.js  index.scss  index.vue
maxgui/share/: config.js  constants.js  overlayTypes.js
maxgui/src/: App.vue  constants.js  main.js  (+1 more)
maxscale-system-test/: .gitignore  CMakeLists.txt  CTestConfig.cmake  ENV_SETUP.md  HOW_TO_WRITE_TEST.md  JENKINS.md  MXS-1737_galeramon_test.cpp  README.md  TEST_RUSULTS.md  alter_router.cpp  auroramon.cpp  auth_change_user_loop.cpp  auth_enable_root.cpp  auth_sqlmode_ansi.cpp  auth_users_from_master.cpp  auth_wchost.cpp  avro.cpp  avro_alter.cpp  avro_long.cpp  backend_auth_fail.cpp  bad_pers.cpp  big_load.cpp  big_load.h  big_transaction.cpp  big_transaction.h  binary_ps.cpp  binary_ps_cursor.cpp  binlog_big_transaction.cpp  binlog_change_master.cpp  binlog_change_master_common.cpp  binlog_change_master_gtid.cpp  binlog_enc_aes_ctr.cnf  binlog_failover.cpp  binlog_incompl.cpp  binlog_semisync.cpp  binlog_semisync_txs1_ss0  blob_test.cpp  blob_test.h  bug143.cpp  bug359.cpp  (+491 more)
maxutils/: CMakeLists.txt
plugins/: CMakeLists.txt
query_classifier/: .gitignore  CMakeLists.txt  Makefile  makefile  query_classifier.cc  query_classifier.h  query_classifier.map
rabbitmq_consumer/: CMakeLists.txt  Makefile  README  SETUP  buildconfig.inc  consumer.c  consumer.cnf  errmsg.sys  rabbitmq-message-consumer.spec
replication_listener/: CMakeLists.txt  COPYING.SkySQL  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README  access_method_factory.cpp  access_method_factory.h  basic_content_handler.cpp  basic_content_handler.h  basic_transaction_parser.cpp  basic_transaction_parser.h  binary_log.cpp  binlog_api.h  binlog_driver.cpp  binlog_driver.h  binlog_event.cpp  binlog_event.h  bounded_buffer.h  cmake_install.cmake  field_iterator.h  gtid.cpp  gtid.h  install_manifest.txt  listener_exception.h  mysql-replication-listener.spec  protocol.cpp  protocol.h  resultset_iterator.cpp  row_of_fields.cpp  row_of_fields.h  tcp_driver.cpp  tcp_driver.h  value.cpp  value.h
table_replication_consistency/: CMakeLists.txt  cmake_install.cmake  table_replication_consistency.cpp  table_replication_consistency.h  table_replication_listener.cpp  table_replication_listener.h  table_replication_metadata.cpp  table_replication_metadata.h  table_replication_parser.cpp  table_replication_parser.h
zmq_consumer/: CMakeLists.txt  zmq_config.ini  zmq_consumer.c
(+8637 files in other folders)
