add_executable(maxadmin maxadmin.c)
add_dependencies(maxadmin maxutils)

find_library(HIST edit)
if(HIST)
  message(STATUS "Building MaxAdmin with editline: ${HIST}")
  add_definitions(-DHISTORY)
  target_link_libraries(maxadmin ${HIST})
else()
  message(STATUS "Could not find editline library. MaxAdmin will be built without it.")
endif()
install_executable(maxadmin core)
