if(LOG_DEBUG)
  add_definitions(-DSS_LOG_DEBUG)
endif()
add_library(log_manager SHARED log_manager.cc)
target_link_libraries(log_manager pthread aio stdc++)
set_target_properties(log_manager PROPERTIES VERSION "1.0.0")
install(TARGETS log_manager DESTINATION ${MAXSCALE_LIBDIR})
if(BUILD_TESTS)
  add_subdirectory(test)
endif()
